--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -151,11 +151,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="BooleanToVisibilityConverter.cs" />
     <Compile Include="MainWindowVM.cs" />
     <Compile Include="Models\SimilarKana.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="SimpleFlowDocument.cs" />
     <Compile Include="StringExt.cs" />
+    <Compile Include="UnionFindNode.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -216,6 +218,9 @@
     <Analyzer Include="..\packages\WpfAnalyzers.2.1.3.2\analyzers\dotnet\cs\Gu.Roslyn.CodeFixExtensions.dll" />
     <Analyzer Include="..\packages\WpfAnalyzers.2.1.3.2\analyzers\dotnet\cs\WpfAnalyzers.CodeFixes.dll" />
     <Analyzer Include="..\packages\WpfAnalyzers.2.1.3.2\analyzers\dotnet\cs\WpfAnalyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="dic\confused.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NMeCab.0.06.4\build\NMeCab.targets" Condition="Exists('..\packages\NMeCab.0.06.4\build\NMeCab.targets')" />
