--- a/JDict/JDict.csproj
+++ b/JDict/JDict.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AsyncEnumerator" Version="2.2.1" />
+  </ItemGroup>
+
 </Project>
