--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.5.0\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Globalization.Calendars, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Globalization.Calendars.4.3.0\lib\net46\System.Globalization.Calendars.dll</HintPath>
       <Private>True</Private>
@@ -129,6 +130,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -158,18 +160,24 @@
     <Compile Include="JapaneseTextPreview.xaml.cs">
       <DependentUpon>JapaneseTextPreview.xaml</DependentUpon>
     </Compile>
+    <Compile Include="KanaBoard.xaml.cs">
+      <DependentUpon>KanaBoard.xaml</DependentUpon>
+    </Compile>
     <Compile Include="KanjiRadicalLookupControl.xaml.cs">
       <DependentUpon>KanjiRadicalLookupControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\ISimilarKana.cs" />
     <Compile Include="Models\NullSimilarKana.cs" />
     <Compile Include="Utils\DualDictionary.cs" />
+    <Compile Include="Utils\EnumerableExt.cs" />
+    <Compile Include="Utils\GridEx.cs" />
     <Compile Include="Utils\NMeCabExt.cs" />
     <Compile Include="Utils\TrivialTemplateSelector.cs" />
     <Compile Include="ViewModels\BooleanToBrushConverter.cs" />
     <Compile Include="ViewModels\BooleanToVisibilityConverter.cs" />
     <Compile Include="ViewModels\CodePointToLongStringConverter.cs" />
     <Compile Include="Models\ILanguageService.cs" />
+    <Compile Include="ViewModels\KanaBoardVM.cs" />
     <Compile Include="ViewModels\KanjiRadicalLookupControlVM.cs" />
     <Compile Include="ViewModels\LineVM.cs" />
     <Compile Include="ViewModels\MainWindowVM.cs" />
@@ -186,6 +194,10 @@
     <Compile Include="Utils\UnionFindNode.cs" />
     <Compile Include="VirtualizingTilePanel.cs" />
     <Page Include="JapaneseTextPreview.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="KanaBoard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
