--- a/DidacticalEnigma/packages.config
+++ b/DidacticalEnigma/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AsyncEnumerator" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
