--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -169,9 +169,13 @@
     <Compile Include="KanjiRadicalLookupControl.xaml.cs">
       <DependentUpon>KanjiRadicalLookupControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\AsyncDataSource.cs" />
     <Compile Include="Models\IDataSource.cs" />
     <Compile Include="Models\ISimilarKana.cs" />
     <Compile Include="Models\NullSimilarKana.cs" />
+    <Compile Include="UsageDataSourcePreview.xaml.cs">
+      <DependentUpon>UsageDataSourcePreview.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Utils\DualDictionary.cs" />
     <Compile Include="Utils\EnumerableExt.cs" />
     <Compile Include="Utils\GridEx.cs" />
@@ -191,6 +195,7 @@
     <Compile Include="Models\WordInfo.cs" />
     <Compile Include="ViewModels\NullabilityToBooleanConverter.cs" />
     <Compile Include="ViewModels\PartOfSpeechToColorConverter.cs" />
+    <Compile Include="ViewModels\UsageDataSourcePreviewVM.cs" />
     <Compile Include="ViewModels\WordVM.cs" />
     <Compile Include="Utils\ObservableBatchCollection.cs" />
     <Compile Include="Utils\RelayCommand.cs" />
@@ -222,6 +227,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UsageDataSourcePreview.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\CodePoint.cs" />
