--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -198,6 +198,7 @@
     <Compile Include="ViewModels\PartOfSpeechToColorConverter.cs" />
     <Compile Include="ViewModels\SelectionInfoToRequestConverter.cs" />
     <Compile Include="ViewModels\SelectionInfoVM.cs" />
+    <Compile Include="ViewModels\TreeSplit.cs" />
     <Compile Include="ViewModels\UsageDataSourcePreviewVM.cs" />
     <Compile Include="ViewModels\WordVM.cs" />
     <Compile Include="Utils\ObservableBatchCollection.cs" />
