Apply "move into separate files" refactoring

--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -170,37 +170,65 @@
       <DependentUpon>KanjiRadicalLookupControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Models\AsyncDataSource.cs" />
+    <Compile Include="Models\Audio.cs" />
+    <Compile Include="Models\CharacterDataSource.cs" />
+    <Compile Include="Models\DataSourceDescriptor.cs" />
+    <Compile Include="Models\Hiragana.cs" />
     <Compile Include="Models\IDataSource.cs" />
+    <Compile Include="Models\ImageParagraph.cs" />
     <Compile Include="Models\ISimilarKana.cs" />
+    <Compile Include="Models\JMDictDataSource.cs" />
+    <Compile Include="Models\Kana.cs" />
+    <Compile Include="Models\Kanji.cs" />
+    <Compile Include="Models\Katakana.cs" />
+    <Compile Include="Models\LanguageService.cs" />
     <Compile Include="Models\NullSimilarKana.cs" />
+    <Compile Include="Models\Paragraph.cs" />
+    <Compile Include="Models\Request.cs" />
     <Compile Include="Models\RichFormatting.cs" />
+    <Compile Include="Models\TanakaCorpusDataSource.cs" />
+    <Compile Include="Models\Text.cs" />
+    <Compile Include="Models\TextParagraph.cs" />
+    <Compile Include="Models\UpdateResult.cs" />
+    <Compile Include="Models\VideoParagraph.cs" />
     <Compile Include="UsageDataSourcePreview.xaml.cs">
       <DependentUpon>UsageDataSourcePreview.xaml</DependentUpon>
     </Compile>
     <Compile Include="Utils\DualDictionary.cs" />
     <Compile Include="Utils\EnumerableExt.cs" />
     <Compile Include="Utils\GridEx.cs" />
+    <Compile Include="Utils\MeCabEntry.cs" />
     <Compile Include="Utils\NMeCabExt.cs" />
+    <Compile Include="Utils\PartOfSpeech.cs" />
     <Compile Include="Utils\TrivialTemplateSelector.cs" />
     <Compile Include="ViewModels\BooleanNegationConverter.cs" />
     <Compile Include="ViewModels\BooleanToBrushConverter.cs" />
     <Compile Include="ViewModels\BooleanToVisibilityConverter.cs" />
     <Compile Include="ViewModels\CodePointToLongStringConverter.cs" />
     <Compile Include="Models\ILanguageService.cs" />
+    <Compile Include="ViewModels\DataSourcePreviewVM.cs" />
+    <Compile Include="ViewModels\DataSourceVM.cs" />
+    <Compile Include="ViewModels\Element.cs" />
+    <Compile Include="ViewModels\HSplit.cs" />
     <Compile Include="ViewModels\KanaBoardVM.cs" />
     <Compile Include="ViewModels\KanjiRadicalLookupControlVM.cs" />
+    <Compile Include="ViewModels\Leaf.cs" />
     <Compile Include="ViewModels\LineVM.cs" />
     <Compile Include="ViewModels\MainWindowVM.cs" />
     <Compile Include="ViewModels\CodePointVM.cs" />
     <Compile Include="Models\KanaProperties.cs" />
-    <Compile Include="Models\SimilarKana.cs" />
+    <Compile Include="Models\EasilyConfusedKana.cs" />
     <Compile Include="Models\WordInfo.cs" />
     <Compile Include="ViewModels\NullabilityToBooleanConverter.cs" />
     <Compile Include="ViewModels\PartOfSpeechToColorConverter.cs" />
+    <Compile Include="ViewModels\Root.cs" />
     <Compile Include="ViewModels\SelectionInfoToRequestConverter.cs" />
     <Compile Include="ViewModels\SelectionInfoVM.cs" />
-    <Compile Include="ViewModels\TreeSplit.cs" />
+    <Compile Include="ViewModels\TextBufferVM.cs" />
+    <Compile Include="ViewModels\Split.cs" />
+    <Compile Include="ViewModels\TreeSplitDataTemplateSelector.cs" />
     <Compile Include="ViewModels\UsageDataSourcePreviewVM.cs" />
+    <Compile Include="ViewModels\VSplit.cs" />
     <Compile Include="ViewModels\WordVM.cs" />
     <Compile Include="Utils\ObservableBatchCollection.cs" />
     <Compile Include="Utils\RelayCommand.cs" />
