--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -159,6 +159,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\BooleanToColorConverter.cs" />
+    <Compile Include="Models\Formatting\FontSize.cs" />
     <Compile Include="Utils\ClipboardHook.cs" />
     <Compile Include="Views\JapaneseTextPreview.xaml.cs">
       <DependentUpon>JapaneseTextPreview.xaml</DependentUpon>
@@ -220,7 +222,7 @@
     <Compile Include="Models\LanguageService\EasilyConfusedKana.cs" />
     <Compile Include="Models\LanguageService\WordInfo.cs" />
     <Compile Include="Converters\NullabilityToBooleanConverter.cs" />
-    <Compile Include="Converters\PartOfSpeechToColorConverter.cs" />
+    <Compile Include="Converters\PartOfSpeechToBrushConverter.cs" />
     <Compile Include="ViewModels\Root.cs" />
     <Compile Include="Converters\SelectionInfoToRequestConverter.cs" />
     <Compile Include="ViewModels\SelectionInfoVM.cs" />
@@ -301,6 +303,15 @@
     <None Include="dic\JMdict_e">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="dic\KanjiStrokeOrders\KanjiStrokeOrders_v4.002.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="dic\KanjiStrokeOrders\KSO_Excel_Sample.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="dic\KanjiStrokeOrders\KSO_PPT_Sample.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="dic\kradfile1_plus_2_utf8">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -328,12 +339,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\packages\WpfAnalyzers.2.1.4.0\analyzers\dotnet\cs\Gu.Roslyn.AnalyzerExtensions.dll" />
-    <Analyzer Include="..\packages\WpfAnalyzers.2.1.4.0\analyzers\dotnet\cs\Gu.Roslyn.CodeFixExtensions.dll" />
-    <Analyzer Include="..\packages\WpfAnalyzers.2.1.4.0\analyzers\dotnet\cs\WpfAnalyzers.CodeFixes.dll" />
-    <Analyzer Include="..\packages\WpfAnalyzers.2.1.4.0\analyzers\dotnet\cs\WpfAnalyzers.dll" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="dic\about.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -354,7 +359,20 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="dic\KanjiStrokeOrders\copyright.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <Resource Include="dic\KanjiStrokeOrders\readme_en_v4.002.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\WpfAnalyzers.2.1.5.0\analyzers\dotnet\cs\Gu.Roslyn.AnalyzerExtensions.dll" />
+    <Analyzer Include="..\packages\WpfAnalyzers.2.1.5.0\analyzers\dotnet\cs\Gu.Roslyn.CodeFixExtensions.dll" />
+    <Analyzer Include="..\packages\WpfAnalyzers.2.1.5.0\analyzers\dotnet\cs\WpfAnalyzers.CodeFixes.dll" />
+    <Analyzer Include="..\packages\WpfAnalyzers.2.1.5.0\analyzers\dotnet\cs\WpfAnalyzers.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NMeCab.0.06.4\build\NMeCab.targets" Condition="Exists('..\packages\NMeCab.0.06.4\build\NMeCab.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
