--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -160,7 +160,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converters\BooleanToColorConverter.cs" />
+    <Compile Include="Models\DataSources\CharacterStrokeOrderDataSource.cs" />
     <Compile Include="Models\Formatting\FontSize.cs" />
+    <Compile Include="Models\Formatting\IFontResolver.cs" />
     <Compile Include="Utils\ClipboardHook.cs" />
     <Compile Include="Views\JapaneseTextPreview.xaml.cs">
       <DependentUpon>JapaneseTextPreview.xaml</DependentUpon>
