Add custom notes data source

--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Converters\BooleanToColorConverter.cs" />
     <Compile Include="Models\DataSources\BasicExpressionCorpusDataSource.cs" />
     <Compile Include="Models\DataSources\CharacterStrokeOrderDataSource.cs" />
+    <Compile Include="Models\DataSources\CustomNotesDataSource.cs" />
     <Compile Include="Models\DataSources\JESCDataSource.cs" />
     <Compile Include="Models\Formatting\FontSize.cs" />
     <Compile Include="Models\Formatting\IFontResolver.cs" />
