--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -164,8 +164,10 @@
     <Compile Include="Models\DataSources\CharacterStrokeOrderDataSource.cs" />
     <Compile Include="Models\DataSources\CustomNotesDataSource.cs" />
     <Compile Include="Models\DataSources\JESCDataSource.cs" />
+    <Compile Include="Models\DataSources\JMDictGreedyDataSource.cs" />
     <Compile Include="Models\Formatting\FontSize.cs" />
     <Compile Include="Models\Formatting\IFontResolver.cs" />
+    <Compile Include="Models\SearchEngine.cs" />
     <Compile Include="Utils\ClipboardHook.cs" />
     <Compile Include="Models\DataSources\PartialWordLookupJMDictDataSource.cs" />
     <Compile Include="Views\JapaneseTextPreview.xaml.cs">
