--- a/DidacticalEnigma/DidacticalEnigma.csproj
+++ b/DidacticalEnigma/DidacticalEnigma.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Utils\ClipboardHook.cs" />
     <Compile Include="ViewModels\FlowDocumentRichFormattingRenderer.cs" />
     <Compile Include="ViewModels\IFontResolver.cs" />
+    <Compile Include="ViewModels\TranslationVM.cs" />
     <Compile Include="Views\JapaneseTextPreview.xaml.cs">
       <DependentUpon>JapaneseTextPreview.xaml</DependentUpon>
     </Compile>
